--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "devDependencies": {
     "babel-preset-es2015": "^6.16.0",
+    "docdash": "^0.4.0",
     "grunt": "^1.0.1",
+    "grunt-babel": "^6.0.0",
     "grunt-jsdoc": "^2.1.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-jsdoc": "^0.1.5"
-  },
-  "dependencies": {
     "jsdoc": "^3.4.3"
   }
 }
